--- a/GitHubApp/RepositoryListCell.xib
+++ b/GitHubApp/RepositoryListCell.xib
@@ -92,16 +92,16 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="repositoryDescription" destination="oOG-Rk-LEB" id="dNG-0v-JvT"/>
-                <outlet property="repositoryLanguage" destination="mpx-NP-2jv" id="lOa-fo-cOt"/>
-                <outlet property="repositoryName" destination="Zhe-MO-dMt" id="gGq-uR-Zch"/>
-                <outlet property="repositoryStar" destination="Udv-Og-mNf" id="KVG-1h-sz1"/>
+                <outlet property="countOfStarsLabel" destination="Udv-Og-mNf" id="jA3-LH-B8r"/>
+                <outlet property="descriptionLabel" destination="oOG-Rk-LEB" id="JEh-Ct-Fuo"/>
+                <outlet property="languageLabel" destination="mpx-NP-2jv" id="yjZ-kg-gmt"/>
+                <outlet property="repositoryNameLabel" destination="Zhe-MO-dMt" id="c5M-ue-mKm"/>
             </connections>
-            <point key="canvasLocation" x="137.59999999999999" y="146.62668665667167"/>
+            <point key="canvasLocation" x="14" y="-78"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="maru" width="72" height="72"/>
-        <image name="star" width="98.400001525878906" height="98.400001525878906"/>
+        <image name="maru" width="150" height="150"/>
+        <image name="star" width="205" height="205"/>
     </resources>
 </document>
