--- a/GitHubApp/Base.lproj/Main.storyboard
+++ b/GitHubApp/Base.lproj/Main.storyboard
@@ -157,7 +157,7 @@ Select scope
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="userImageLoadingIndicator" destination="PhF-zd-Vo1" id="sq9-fA-quC"/>
+                                    <outlet property="userImageLoadingIndicatorView" destination="PhF-zd-Vo1" id="sq9-fA-quC"/>
                                     <outlet property="userImageView" destination="oC3-aU-AvF" id="VHd-Ot-ktA"/>
                                     <outlet property="userNameLabel" destination="dhu-b0-kDj" id="5Gz-QC-pmX"/>
                                 </connections>
@@ -170,7 +170,7 @@ Select scope
                     </tableView>
                     <connections>
                         <outlet property="backgroundView" destination="4Ls-ta-kjw" id="gRJ-Zp-Z5g"/>
-                        <outlet property="backgroundViewindicator" destination="Sbb-BG-gUp" id="7N9-xj-RAk"/>
+                        <outlet property="backgroundViewIndicatorView" destination="Sbb-BG-gUp" id="7N9-xj-RAk"/>
                         <segue destination="7Em-rR-zZU" kind="show" identifier="toUserRepositoryList" id="Utz-7z-QWi"/>
                     </connections>
                 </tableViewController>
@@ -299,7 +299,7 @@ Select scope
                                 <rect key="frame" x="0.0" y="234" width="375" height="433"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Fu5-KW-BGm" customClass="RepositoryListCell" customModule="GitHubApp" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Fu5-KW-BGm" customClass="RepositoryListCell" customModule="GitHubApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fu5-KW-BGm" id="oCv-3o-5r2">
@@ -357,14 +357,14 @@ Select scope
                     </view>
                     <connections>
                         <outlet property="backgroundView" destination="BLt-xF-Ayv" id="bU7-OE-Q3J"/>
-                        <outlet property="follower" destination="DFZ-bS-4mQ" id="tZK-ez-jg5"/>
-                        <outlet property="following" destination="3A9-fI-D7e" id="8cB-JI-WLi"/>
-                        <outlet property="fullname" destination="KOx-0O-13I" id="Bip-mW-m28"/>
-                        <outlet property="imageView" destination="aEI-Lt-1P6" id="vxX-Id-EG9"/>
-                        <outlet property="name" destination="DbV-F0-7Bb" id="Ype-xf-Uhd"/>
+                        <outlet property="countOfRepositoriesLabel" destination="dve-jV-hpu" id="RJ6-k8-Rwq"/>
+                        <outlet property="fullnameLabel" destination="KOx-0O-13I" id="Bip-mW-m28"/>
+                        <outlet property="numOfFollowerLabel" destination="DFZ-bS-4mQ" id="tZK-ez-jg5"/>
+                        <outlet property="numOfFollowingLabel" destination="3A9-fI-D7e" id="8cB-JI-WLi"/>
                         <outlet property="repoTableView" destination="azp-ch-bSC" id="5PG-mD-xF4"/>
-                        <outlet property="reposCount" destination="dve-jV-hpu" id="RJ6-k8-Rwq"/>
                         <outlet property="userImageIndicator" destination="GNk-Da-A1R" id="NJG-3j-LD4"/>
+                        <outlet property="userImageView" destination="aEI-Lt-1P6" id="vxX-Id-EG9"/>
+                        <outlet property="userNameLabel" destination="DbV-F0-7Bb" id="Ype-xf-Uhd"/>
                         <outlet property="userRepositoriesIndicator" destination="s4T-D7-esB" id="oIA-v5-liT"/>
                         <segue destination="wbd-Jg-91A" kind="show" identifier="toWebView" id="f5L-PD-mOk"/>
                     </connections>
